[gd_scene load_steps=32 format=3 uid="uid://c7m1oyoo832ne"]

[ext_resource type="Script" path="res://src/scripts/auth-scripts/register_ui.gd" id="1_mfjp8"]
[ext_resource type="Texture2D" uid="uid://bvxw60u844ekc" path="res://src/ui/backgrounds/background.png" id="2_ldkhn"]
[ext_resource type="Texture2D" uid="uid://1sm8ojiupx7b" path="res://src/ui/elements/auth_background.png" id="3_pdbsj"]
[ext_resource type="Texture2D" uid="uid://dfupk21xv6i4k" path="res://src/ui/buttons/button.png" id="4_hbt2t"]
[ext_resource type="Texture2D" uid="uid://2vw4fs6wgpeo" path="res://src/ui/checkboxes/remember копия (1).png" id="5_hhspj"]
[ext_resource type="Texture2D" uid="uid://crybqnot3sly0" path="res://src/ui/buttons/arrow back white.png" id="6_2y8fy"]
[ext_resource type="Texture2D" uid="uid://ci4iu6mgvbqd7" path="res://src/ui/checkboxes/remember off копия.png" id="6_3hpjw"]
[ext_resource type="Texture2D" uid="uid://ri7823t2v7lb" path="res://src/ui/buttons/enter button.png" id="7_4l7en"]
[ext_resource type="Texture2D" uid="uid://cvf6qa4l4g30e" path="res://src/ui/elements/input.png" id="10_hgcji"]
[ext_resource type="Texture2D" uid="uid://n1qwjnwxgvq8" path="res://src/ui/checkboxes/Hide.png" id="11_4c5t4"]
[ext_resource type="Texture2D" uid="uid://b102d7pihqbxr" path="res://src/ui/checkboxes/Eye.png" id="12_612il"]
[ext_resource type="PackedScene" uid="uid://mea22juv2m6t" path="res://src/scenes/auth-scenes/failed_to_connect.tscn" id="13_1jsrq"]
[ext_resource type="Texture2D" uid="uid://b1im4ry4rnu28" path="res://src/ui/buttons/support green.png" id="13_xnvx8"]
[ext_resource type="PackedScene" uid="uid://cx5etu0rvfai4" path="res://src/scenes/auth-scenes/waiting_response.tscn" id="14_a3g2u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rvhr0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nj4nk"]
texture = ExtResource("4_hbt2t")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xlckv"]
texture = ExtResource("7_4l7en")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ug50c"]
texture = ExtResource("4_hbt2t")
texture_margin_left = 55.0
texture_margin_right = 50.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gwbw4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8srd0"]
texture = ExtResource("4_hbt2t")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jdr8p"]
texture = ExtResource("4_hbt2t")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p2o7m"]
texture = ExtResource("7_4l7en")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_614v8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ugt88"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_thq7u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c6gig"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vp42w"]
texture = ExtResource("10_hgcji")
texture_margin_left = 25.0
texture_margin_top = 25.0
texture_margin_bottom = 25.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sokdo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sqv44"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1wjd3"]
texture = ExtResource("10_hgcji")
texture_margin_left = 25.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iscbl"]

[node name="RegisterUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -500.0
offset_bottom = -900.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mfjp8")

[node name="APIRequest" type="HTTPRequest" parent="."]
use_threads = true
timeout = 5.0

[node name="BackGround-Image" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -12.0
offset_top = -10.0
offset_right = 904.0
offset_bottom = 1769.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.775, 0.775)
pivot_offset = Vector2(0, 0.23)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_ldkhn")
stretch_mode = 6

[node name="AuthContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 22.0
offset_top = 39.0
offset_right = 1658.0
offset_bottom = 2375.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.275, 0.275)

[node name="AuthBackground" type="TextureRect" parent="AuthContainer"]
layout_mode = 2
texture = ExtResource("3_pdbsj")

[node name="NavigationContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 35.5
offset_top = 732.0
offset_right = 465.5
offset_bottom = 819.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 11

[node name="BackButton" type="Button" parent="NavigationContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 31
theme_override_styles/focus = SubResource("StyleBoxEmpty_rvhr0")
theme_override_styles/hover = SubResource("StyleBoxTexture_nj4nk")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xlckv")
theme_override_styles/normal = SubResource("StyleBoxTexture_ug50c")
icon = ExtResource("6_2y8fy")
icon_alignment = 1

[node name="RegisterButton" type="Button" parent="NavigationContainer"]
modulate = Color(1, 1, 1, 0.470588)
layout_mode = 2
theme_override_font_sizes/font_size = 31
theme_override_styles/focus = SubResource("StyleBoxEmpty_gwbw4")
theme_override_styles/disabled = SubResource("StyleBoxTexture_8srd0")
theme_override_styles/hover = SubResource("StyleBoxTexture_jdr8p")
theme_override_styles/pressed = SubResource("StyleBoxTexture_p2o7m")
theme_override_styles/normal = SubResource("StyleBoxTexture_ug50c")
text = "Register"

[node name="RegisterText" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 166.0
offset_top = 128.0
offset_right = 335.0
offset_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2

[node name="RegisterText" type="Label" parent="RegisterText"]
layout_mode = 2
theme_override_font_sizes/font_size = 44
text = "Register"

[node name="TechSupportUI" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 139.0
offset_top = 827.0
offset_right = 361.0
offset_bottom = 875.0
grow_horizontal = 2
grow_vertical = 0

[node name="TechSupportButton" type="Button" parent="TechSupportUI"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_614v8")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_614v8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ugt88")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_ugt88")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ugt88")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_ugt88")
theme_override_styles/hover = SubResource("StyleBoxEmpty_thq7u")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_thq7u")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_c6gig")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_c6gig")
theme_override_styles/normal = SubResource("StyleBoxEmpty_c6gig")
text = "Tech support"
icon = ExtResource("13_xnvx8")
icon_alignment = 2

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="EmailInfoUI" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 62.0
offset_top = 219.0
offset_right = 466.0
offset_bottom = 278.0
grow_horizontal = 2
grow_vertical = 2

[node name="EmailInfoUI" type="Label" parent="UI/EmailInfoUI"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 21
text = "E-mail"

[node name="EmailDataUI" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 46.0
offset_top = 258.0
offset_right = 445.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2

[node name="Email" type="TextEdit" parent="UI/EmailDataUI"]
auto_translate_mode = 2
layout_mode = 2
localize_numeral_system = false
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = 9
theme_override_font_sizes/font_size = 21
theme_override_styles/normal = SubResource("StyleBoxTexture_vp42w")
theme_override_styles/focus = SubResource("StyleBoxTexture_sokdo")

[node name="LoginInfoUI" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 60.0
offset_top = 307.0
offset_right = 459.0
offset_bottom = 366.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoginInfoUI" type="Label" parent="UI/LoginInfoUI"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 21
text = "Login"

[node name="LoginDataUI" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 45.0
offset_top = 348.0
offset_right = 444.0
offset_bottom = 410.0
grow_horizontal = 2
grow_vertical = 2

[node name="Login" type="TextEdit" parent="UI/LoginDataUI"]
auto_translate_mode = 2
layout_mode = 2
localize_numeral_system = false
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 21
theme_override_styles/normal = SubResource("StyleBoxTexture_vp42w")
theme_override_styles/focus = SubResource("StyleBoxTexture_sokdo")

[node name="PasswordInfoUI" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 59.0
offset_top = 387.0
offset_right = 463.0
offset_bottom = 446.0
grow_horizontal = 2
grow_vertical = 2

[node name="PasswordInfoUI" type="Label" parent="UI/PasswordInfoUI"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 21
text = "Password"

[node name="PasswordDataUI" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 45.0
offset_top = 426.0
offset_right = 444.0
offset_bottom = 488.0
grow_horizontal = 2
grow_vertical = 2

[node name="Password" type="LineEdit" parent="UI/PasswordDataUI"]
layout_mode = 2
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_colors/font_uneditable_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 23
theme_override_styles/focus = SubResource("StyleBoxEmpty_sqv44")
theme_override_styles/normal = SubResource("StyleBoxTexture_1wjd3")
secret = true

[node name="ConfirmPasswordInfoUI" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 59.0
offset_top = 475.0
offset_right = 463.0
offset_bottom = 534.0
grow_horizontal = 2
grow_vertical = 2

[node name="ConfirmPasswordDataUI" type="Label" parent="UI/ConfirmPasswordInfoUI"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 21
text = "Confirm Password"

[node name="ConfirmPasswordDataUI" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 46.0
offset_top = 516.0
offset_right = 445.0
offset_bottom = 578.0
grow_horizontal = 2
grow_vertical = 2

[node name="ConfirmPassword" type="LineEdit" parent="UI/ConfirmPasswordDataUI"]
layout_mode = 2
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_colors/font_uneditable_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 23
theme_override_styles/focus = SubResource("StyleBoxEmpty_sqv44")
theme_override_styles/normal = SubResource("StyleBoxTexture_1wjd3")
secret = true

[node name="PrivacyNoticeCheckBox" type="CheckBox" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = 584.0
offset_right = 133.0
offset_bottom = 666.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxEmpty_iscbl")
theme_override_icons/checked = ExtResource("5_hhspj")
theme_override_icons/unchecked = ExtResource("6_3hpjw")
theme_override_icons/radio_checked = ExtResource("5_hhspj")
theme_override_icons/radio_unchecked = ExtResource("6_3hpjw")
theme_override_icons/checked_disabled = ExtResource("5_hhspj")
theme_override_icons/unchecked_disabled = ExtResource("6_3hpjw")
theme_override_icons/radio_checked_disabled = ExtResource("5_hhspj")
theme_override_icons/radio_unchecked_disabled = ExtResource("6_3hpjw")
alignment = 1

[node name="PrivacyNoticeLabel" type="RichTextLabel" parent="UI/PrivacyNoticeCheckBox"]
layout_mode = 0
offset_left = 80.0
offset_top = 21.5
offset_right = 316.0
offset_bottom = 77.5
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true
text = "[u]Privacy Notice[/u]"

[node name="PasswordHideButtonUI" type="MarginContainer" parent="UI"]
layout_mode = 0
offset_left = 385.0
offset_top = 438.0
offset_right = 422.0
offset_bottom = 472.0

[node name="PasswordHideButton" type="TextureButton" parent="UI/PasswordHideButtonUI"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("11_4c5t4")
texture_pressed = ExtResource("12_612il")
ignore_texture_size = true
stretch_mode = 0

[node name="FailedToConnect" parent="." instance=ExtResource("13_1jsrq")]
visible = false
layout_mode = 1

[node name="WaitingResponse" parent="." instance=ExtResource("14_a3g2u")]
visible = false
layout_mode = 1

[node name="APIWaitResponseTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[connection signal="request_completed" from="APIRequest" to="." method="_on_http_request_request_completed"]
[connection signal="pressed" from="NavigationContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="NavigationContainer/RegisterButton" to="." method="_on_sign_up_button_pressed"]
[connection signal="toggled" from="UI/PrivacyNoticeCheckBox" to="." method="_on_privacy_notice_check_box_toggled"]
[connection signal="toggled" from="UI/PasswordHideButtonUI/PasswordHideButton" to="." method="_on_password_hide_button_toggled"]
[connection signal="timeout" from="APIWaitResponseTimer" to="." method="_on_api_wait_response_timer_timeout"]
